correção criar categoria objeto único