@@ -6,7 +6,7 @@ import java.util.List;
 
 public class ResponseUtil {
     public static <T> ResponseEntity<Object> singleOrList(List<T> lista) {
-        Object retorno = (lista.size() == 1) ? lista.get(0) : lista;
+        Object retorno = (lista.size() == 1) ? lista.getFirst() : lista;
         return ResponseEntity.status(HttpStatus.CREATED).body(retorno);
     }
 }
